package td1.step4.api.dietetic;

public interface DieteticElement {
    double calories_per_100g();
    // calories from http://www.les-calories.com/
}
